# Bambu-Run

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: bump-version.yml
bambu_run/: __init__.py  admin.py  apps.py  bambu_cloud.py  conf.py  diagnostics.py  forms.py  mcp_tools.py  models.py  mqtt_client.py  urls.py  utils.py  views.py
bambu_run/management/commands/: bambu_cleanup.py  bambu_collector.py  bambu_diagnose.py  bambu_import_colors.py  bambu_mcp_server.py  (+1 more)
bambu_run/migrations/: 0001_initial.py  0002_filament_is_transparent.py  0003_cloud_task.py  0004_h2c_dual_nozzle_and_ams_fields.py  0005_printermetrics_vortek_raw.py  0006_alter_filamentsnapshot_options_and_more.py  0007_hotend_hotendsnapshot.py  0008_printermetrics_nozzle_info.py
docker/: supervisord.conf
docs/: LOCAL_DEBUG_INSTRUCTIONS.md
docs/Bambu_Color_Catalog/: ABS.txt  ASA.txt  PA6-GF.txt  PC FR.txt  PETG Basic.txt  PETG HF.txt  PETG Translucent.txt  PLA Basic.txt  PLA Galaxy.txt  PLA Marble.txt  PLA Matte.txt  PLA Metal.txt  PLA Silk.txt  PLA Sparkle.txt  PLA Translucent.txt  PLA Wood.txt
native/: bambu-run-collector.service  bambu-run-mcp.service  bambu-run-web.service  bambu-run.sh
standalone/: manage.py  settings.py  urls.py  wsgi.py
standalone/templates/: standalone_base.html
tests/: settings.py  test_ams_type_from_info.py  test_diagnostics.py  test_filament_context.py  test_hotend_collection.py  test_hotend_dashboard.py  test_hotend_parsing.py  test_multi_ams_collection.py  test_multi_device_collection.py  test_printer_routing.py  test_resolve_printer_device.py  test_vortek_groundwork.py  urls.py
(+18 files in other folders)
